# BP_TCS_Kedro

./: README.md
Kedro_mnist_Cnn/kedro_mnist_package/: README.md  tcs_kedro_mnist-0.1-py3-none-any.whl
Kedro_mnist_Cnn/kedro_mnist_project/: README.md  pyproject.toml  requirements.txt
Kedro_mnist_Cnn/kedro_mnist_project/conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml  parameters_deployment.yml
Kedro_mnist_Cnn/kedro_mnist_project/src/tcs_kedro_mnist/: __init__.py  __main__.py  hooks.py
Kedro_mnist_Cnn/kedro_mnist_project/src/tcs_kedro_mnist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Kedro_mnist_Cnn/kedro_mnist_project/src/tcs_kedro_mnist/datasets/: np_dataset.py
Kedro_mnist_Cnn/kedro_mnist_project/src/tcs_kedro_mnist/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
Kedro_mnist_Cnn/kedro_mnist_project/src/tcs_kedro_mnist/pipelines/deployment/: __init__.py  nodes.py  pipeline.py
Kedro_mnist_Cnn/kedro_mnist_project/tests/pipelines/data_processing/: test_pipeline.py
Kedro_mnist_Cnn/kedro_mnist_project/tests/pipelines/datascience/: test_pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/: README.md  check.ipynb  pyproject.toml  requirements.txt
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/conf/base/: parameters_data_preprocessing.yml
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/notebooks/: check.ipynb  run_model.ipynb
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/src/mnistclassification/: __init__.py  __main__.py  settings.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/src/mnistclassification/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/src/mnistclassification/pipelines/data_science/: nodes.py  pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/src/mnistclassification/pipelines/deployment/: nodes.py  pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/tests/pipelines/data_preprocessing/: test_pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/tests/pipelines/data_science/: test_pipeline.py
Kedro_mnist_Sklearn/TCS_MNIST_Classification_Sklearn_project/tests/pipelines/deployment/: test_pipeline.py
(+5 files in other folders)
